--- a/style.css
+++ b/style.css
@@ -8,13 +8,20 @@
 }
 
 body {
-    font-family: "inter" sans-serif;
+    font-family: "inter";
 }
+
+
 
 .container {
     max-width: 1110px;
-    margin: 0 auto;
+    margin: 30px auto;
+
 }
+
+
+/* HEADER /////////////////////////////////////////////////////////////// */
+
 
 .logo img {
     max-width: 150px;
@@ -27,7 +34,12 @@ body {
     align-items: center;
     padding: 40px 0;
     margin-bottom: 30px;
-    max-width: 1110px;
+    max-height: 520px;
+    
+}
+
+a {
+    text-decoration: none;
 }
 
 .navbar {
@@ -43,22 +55,148 @@ nav ul {
     font-size: 15px;
 }
 
+nav ul li a {
+    color: #5E607A ;
+    font-weight: 400;
+    font-size: 15px;
+    font-family: "inter" sans-serif;
+    padding: 15px;
+}
+
 ul{
     list-style: none;
 }
 
-.hero .container {
+
+/* MAIN /////////////////////////////////////////////////////////////// */
+
+.hero {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding: 20px;
-
+    grid-template-rows: auto auto ;
+    width: 1110px;
 }
 
-.vasiliss img {
+.content {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: 1;
     grid-column: 1/3;
+    grid-row: 1/2;
+    
+
+}
+
+.vasi {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    max-width: 100%;
+    object-fit: cover;
+    width: 100%;
 }
 
 
 
+.title {
+    grid-column: 1;
+    grid-row: 2;
+    font-family: "inter" ;
+    font-size: 30px;
+    font-weight: 800;
+    gap: 20px;
+}
+
+.com {
+    grid-column: 2;
+    grid-row: 2;
+    place-content: center;
+}
+
+.com p {
+    font-family: "inter";
+    font-size: 15px;
+    font-family: "inter";
+    letter-spacing: 3px;
+    gap: 20px;
+
+}
 
 
+.article {
+    grid-column: 3;
+    grid-row: 1/3;
+    margin-left: 30px;
+    background-color: #00001A;
+    color: #fffdfa ;
+    padding: 22px ;
+
+}
+
+.article h1{
+    color: #E9AA52;
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 20px;
+
+
+}
+
+.article h2{
+    font-size: 20px;
+    font-weight: 800;
+    
+
+} 
+
+.article p{
+
+    font-size: 15px;
+    font-weight: 400;
+    color: #C5c6ce;
+    margin-bottom: 30px ;
+    font-weight: 400;
+    color: #5E607A;
+    
+}
+
+p {
+    margin-bottom: 40px;
+}
+
+
+.btn {
+    font-weight: 700;
+    border: 4px white;
+    background-color: #f15d51 ;
+    padding: 10px;
+    letter-spacing: 1px;
+    width: 200px;
+}
+
+
+a{
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;;
+    line-height: 30px;
+
+}
+
+
+.line {
+
+    border: 1px solid white;
+    
+}
+
+/*/////////////////////////////////////////////////////////*/
+
+
+.contentis {
+    display: flex;
+}
+
+.diapo2 {
+    gap: 20px;
+}
