--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .container {
     max-width: 1110px;
-    margin: 30px auto;
+    margin: 50px auto;
 
 }
 
@@ -28,14 +28,12 @@ body {
     display: block;
 }
 
-.header .container {
+.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 0;
     margin-bottom: 30px;
-    max-height: 520px;
-    
+    max-height: 520px;  
 }
 
 a {
@@ -51,7 +49,7 @@ a {
 nav ul {
     display: flex;
     text-transform: capitalize;
-    padding: 15px 10px;
+    padding: 15px 1px;
     font-size: 15px;
 }
 
@@ -83,8 +81,12 @@ ul{
     grid-template-rows: 1;
     grid-column: 1/3;
     grid-row: 1/2;
-    
+}
 
+.title, .com {
+    display: grid;
+    padding-top: 20px;
+    
 }
 
 .vasi {
@@ -104,31 +106,35 @@ ul{
     font-size: 30px;
     font-weight: 800;
     gap: 20px;
+    margin-top: 10px;
 }
 
 .com {
     grid-column: 2;
     grid-row: 2;
     place-content: center;
+    font-family: "inter";
+    font-size: 15px;
+    letter-spacing: 2px;
+    color: #5E607A;
+    
 }
 
 .com p {
-    font-family: "inter";
-    font-size: 15px;
-    font-family: "inter";
-    letter-spacing: 3px;
-    gap: 20px;
-
+    margin-bottom: 45px;
+    margin-top: 15px;
 }
-
 
 .article {
     grid-column: 3;
     grid-row: 1/3;
-    margin-left: 30px;
+    margin-left: 15px;
     background-color: #00001A;
     color: #fffdfa ;
-    padding: 22px ;
+    padding: 15px ;
+    letter-spacing: 1px;
+    max-height: 552px;
+    max-width: 355px;
 
 }
 
@@ -136,7 +142,8 @@ ul{
     color: #E9AA52;
     font-size: 40px;
     font-weight: 600;
-    margin-top: 20px;
+    margin-top: 10px;
+    
 
 
 }
@@ -144,6 +151,9 @@ ul{
 .article h2{
     font-size: 20px;
     font-weight: 800;
+    margin-top: 10px;
+    margin-bottom: 8px;
+    
     
 
 } 
@@ -153,15 +163,14 @@ ul{
     font-size: 15px;
     font-weight: 400;
     color: #C5c6ce;
-    margin-bottom: 30px ;
+    margin-bottom: 40px ;
     font-weight: 400;
     color: #5E607A;
+    line-height: 1.5;
     
 }
 
-p {
-    margin-bottom: 40px;
-}
+
 
 
 .btn {
@@ -170,18 +179,24 @@ p {
     background-color: #f15d51 ;
     padding: 10px;
     letter-spacing: 1px;
-    width: 200px;
+    width: 180px;
+    margin-top: 25px ;
+    
+    
+    
+    
 }
 
 
-a{
+a {
     color: white;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 400;
     text-transform: uppercase;;
     line-height: 30px;
-
+    
 }
+
 
 
 .line {
@@ -194,9 +209,62 @@ a{
 
 
 .contentis {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 1fr auto 1fr auto 1fr;
+    width: fit-content;
+    gap: 20px;
+    line-height: 1.5;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    clear: both;
+    
+
+
 }
 
-.diapo2 {
-    gap: 20px;
+.contentis img{
+    max-width: 100px;
+}
+
+.info h1 {
+    font-size: 32px;
+    color: #c5c6ce ;
+}
+
+
+.info h3 {
+    font-size: 18px;
+    font-weight: bold;
+    font-weight: 800;
+    
+}
+
+.info p{
+    color: #5e607A;
+
+font-size: 15px;
+
+}
+
+@media screen and (max-width: 768px) {
+    .contentis {
+      grid-template-columns: 1fr; /* Toutes les colonnes passent en une seule */
+    text-align: center;
+    
+    }
+
+    .contentis img {
+      max-width: 80%; /* Redimensionne les images sur mobile */
+    }
+
+    .hero {
+      grid-template-columns: 1fr; /* Adapte aussi la section hero */
+    }
+
+    .article {
+        grid-column: 1; 
+        grid-row: auto; 
+        margin: 20px 0; 
+        max-width: 100%; 
+    }
 }
